After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787873 - test-ui: Fix several leaks
test-ui: Fix several leaks
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2017-09-19 07:11 UTC by Christophe Fergeau
Modified: 2017-09-19 10:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test-ui: Fix several leaks (1.58 KB, patch)
2017-09-19 07:11 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2017-09-19 07:11:49 UTC
Fixing these leaks makes it easier to spot leaks coming from the
underlying libraries when running under valgrind.

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>
Comment 1 Christophe Fergeau 2017-09-19 07:11:53 UTC
Created attachment 360025 [details] [review]
test-ui: Fix several leaks
Comment 2 Bastien Nocera 2017-09-19 08:36:24 UTC
Review of attachment 360025 [details] [review]:

Looks good otherwise.

::: tools/grilo-test-ui/main.c
@@ +544,3 @@
   while (values) {
+    char *desc = value_description ((GValue *) values->data);
+    composed = g_string_append (composed, desc);

The assignment isn't necessary, you can remove it.
Comment 3 Christophe Fergeau 2017-09-19 10:43:51 UTC
Attachment 360025 [details] pushed as 2b2c5cf - test-ui: Fix several leaks