test-ui: Fix several leaks

Fixing these leaks makes it easier to spot leaks coming from the
underlying libraries when running under valgrind.

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

https://bugzilla.gnome.org/show_bug.cgi?id=787873